# aSocial

./: .clang-format  .gitignore  .qmlformat.ini  AGENTS.md  CMakeLists.txt  README.md  _prepare.sh  asocial.desktop  build.sh  check.sh  common.cmake  libs.cmake  plugins.cmake  test.sh  tests.cmake
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/modules/: clang-format.cmake
doc/: asocial_description_en.md
docker/: Dockerfile.build
i18n/: asocial_ru_RU.ts
include/: CoreInterface.h  Log.h  PluginInterface.h  PluginPermissions.h
include/plugin/: CommAudioPluginInterface.h  CommDataPluginInterface.h  CommPluginInterface.h  CommTextPluginInterface.h  CommVideoCallPluginInterface.h  CommVideoPluginInterface.h  CommVoiceCallPluginInterface.h  DBKVPluginInterface.h  DBSQLPluginInterface.h  DatabasePluginInterface.h  (+2 more)
lib/: openssl.cmake
libs/: libs.cmake
libs/asocial_proto/: CMakeLists.txt
libs/asocial_proto/libs/asocial_protogen/: CMakeLists.txt
libs/asocial_proto/libs/asocial_protogen/include/asocial_protogen/: entity_parser.h  templates.h
libs/asocial_proto/libs/asocial_protogen/src/: coredb.cpp  entity_parser.cpp  templates.cpp
libs/asocial_proto/proto/asocial/v1/: contact.proto  event.proto  group.proto  message.proto  options_deps.proto  params.proto  profile.proto  profile_param.proto
libs/asocial_tpl/: CMakeLists.txt
libs/asocial_tpl/include/asocial_tpl/: Template.h
libs/asocial_tpl/src/: Template.cpp
modules/: CMakeLists.txt  modules.cmake
modules/backend/: CMakeLists.txt  README.md
modules/backend/include/backend/: backend.h
modules/backend/src/: backend.cpp  bedatabase.cpp  bedatabase.h
modules/crypto/: CMakeLists.txt  README.md
modules/crypto/include/crypto/: crypto.h  privkey.h  pubkey.h
modules/crypto/lib/: simpleqtcryptor.cmake
modules/crypto/lib/simpleqtcryptor/: simpleqtcryptor.h
modules/crypto/libs/: simpleqtcryptor.cmake
modules/crypto/libs/simpleqtcryptor/: README  simpleqtcryptor.cpp  simpleqtcryptor.h
modules/crypto/src/: crypto.cpp  privkey.cpp  pubkey.cpp
modules/database/: CMakeLists.txt  README.md
modules/database/include/database/: nosqldatabase.h  sqldatabase.h
modules/database/lib/: leveldb.cmake  qsqlcipher.cmake
modules/database/lib/qsqlcipher/: CMakeLists.txt  qsql_sqlcipher.cpp  qsql_sqlcipher_p.h
modules/database/libs/: leveldb.cmake  qsqlcipher.cmake
modules/database/libs/qsqlcipher/: CMakeLists.txt  README.md  sqlcipher_generate_src.cmake
modules/database/src/: nosqldatabase.cpp  sqldatabase.cpp
modules/frontend/: CMakeLists.txt  README.md  android.cmake  qml.qrc
modules/frontend/android/: AndroidManifest.xml  build.gradle
modules/frontend/include/frontend/: frontend.h
modules/frontend/qml/: Account.qml  Accounts.qml  PasswordRequest.qml  Profile.qml  UserInteraction.qml  main.qml
modules/frontend/qml/Components/: ActionMenu.qml  ActionWait.qml  Button.qml  EditableInput.qml  EditableText.qml  LineOfLife.qml  ScrollBar.qml  ShowEvent.qml
modules/frontend/qml/Components/LineOfLife/: AxisCursor.qml  AxisMark.qml  EventMark.qml
modules/frontend/qml/js/: account.js  lineoflife.js  markdown.lib.js  profile.js  userinteraction.js
modules/frontend/qml/js/lib/: Markdown.Converter.js  Markdown.Converter.js.txt
modules/frontend/scripts/: asocial
modules/frontend/src/: accountdatabase.cpp  accountdatabase.h  fedatabase.cpp  fedatabase.h  frontend.cpp  main.cpp  wdate.cpp  wdate.h
modules/frontend/src/storage/: internalimageprovider.cpp  internalimageprovider.h  internalstorage.cpp  internalstorage.h
modules/network/: CMakeLists.txt  README.md
modules/network/include/network/: netdevice.h  network.h
modules/network/src/: netdevice.cpp  network.cpp
modules/settings/: CMakeLists.txt
modules/settings/include/: settings.h
modules/settings/src/: settings.cpp
plugins/: common.cmake  libs.cmake  plugin.cmake
plugins/comm-tox/: CMakeLists.txt
plugins/comm-tox/libs/toxcore/: CMakeLists.txt  config.cmake
plugins/comm-tox/libs/toxcore/libs/sodium/: CMakeLists.txt  config.cmake
plugins/comm-tox/src/: CommToxPlugin.cpp  CommToxPlugin.h  plugin.cpp  plugin.h
plugins/dbkv-rocksdb/: CMakeLists.txt
plugins/dbkv-rocksdb/libs/rocksdb/: CMakeLists.txt  config.cmake
plugins/dbkv-rocksdb/src/: RocksDBStore.cpp  RocksDBStore.h  plugin.cpp  plugin.h
plugins/dbkv-rocksdb/tests/: plugin_dbkv_rocksdb.cpp
plugins/dbsql-sqlcipher/: CMakeLists.txt
plugins/dbsql-sqlcipher/libs/qsqlcipher/: CMakeLists.txt  README.md  config.cmake  qsqlcipher.patch
plugins/dbsql-sqlcipher/libs/qsqlcipher/libs/tomcrypt/: CMakeLists.txt  config.cmake
plugins/dbsql-sqlcipher/src/: DBSQLSqlCipherPlugin.cpp  DBSQLSqlCipherPlugin.h
plugins/dbsql-sqlite/: CMakeLists.txt
plugins/dbsql-sqlite/src/: DBSQLSqlitePlugin.cpp  DBSQLSqlitePlugin.h  VirtualSqliteDatabase.cpp  VirtualSqliteDatabase.h  plugin.cpp  plugin.h
plugins/dbsql-sqlite/tests/: plugin_dbsql_sqlite.cpp
plugins/ui-cmd/: CMakeLists.txt
plugins/ui-cmd/libs/cli/: CMakeLists.txt  config.cmake
plugins/ui-cmd/libs/qr_code_generator/: CMakeLists.txt  config.cmake
plugins/ui-cmd/src/: UiCmdPlugin.cpp  UiCmdPlugin.h  plugin.cpp  plugin.h  uiworker.cpp  uiworker.h
plugins/ui-gui/: CMakeLists.txt
plugins/ui-gui/qml/: Main.qml
plugins/ui-gui/qml/components/: ConnectionLines.qml  DayNightBackground.qml  FamilyTree.qml  HamburgerMenu.qml  InitScreen.qml  LoadingScreen.qml  LoginScreen.qml  MainScreen.qml  MenuSectionHeader.qml  MessageWindow.qml  PersonaNode.qml  RadialMenu.qml  TimelineBar.qml  ToastOverlay.qml
plugins/ui-gui/src/: GuiBackend.cpp  GuiBackend.h  UiGuiPlugin.cpp  UiGuiPlugin.h  plugin.cpp  plugin.h
src/: CoreAccessProxy.cpp  CoreAccessProxy.h  core.cpp  core.h  log.cpp  main.cpp  plugins.cpp  plugins.h  settings.cpp  settings.h
tests/: CMakeLists.txt  cli_integration_tests.cpp  console_integration_tests.cpp  gui_integration_tests.cpp
tests/kotik/: Kotik.cpp  Kotik.h  ProcessLogMonitor.cpp  ProcessLogMonitor.h
tool/: build-docker-android.sh  build-docker-linux.sh
(+51 files in other folders)
